--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "scripts": {
     "build": "npm run clean && tsc",
-    "clean": "shx rm -rf build",
+    "clean": "rimraf build",
     "start": "node build/index.js",
     "test": "nyc mocha"
   },
@@ -59,7 +59,6 @@
     "mocha": "^7.1.0",
     "nyc": "^15.0.0",
     "prettier": "^2.0.2",
-    "shx": "^0.3.2",
     "source-map-support": "^0.5.16",
     "ts-node": "^8.8.1",
     "tsconfig-paths": "^3.9.0",
