--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "build/**/*"
   ],
   "dependencies": {
-    "@types/mkdirp": "^0.5.2",
     "chalk": "2.4.2",
     "commander": "^5.0.0",
     "ejs": "^2.7.1",
@@ -36,6 +35,8 @@
     "listr": "^0.14.3",
     "mkdirp": "^1.0.3",
     "ncp": "^2.0.0",
+    "node-emoji": "^1.10.0",
+    "pluralize": "^8.0.0",
     "rimraf": "^3.0.2",
     "shelljs": "^0.8.3",
     "yargs": "^15.3.1"
@@ -43,8 +44,10 @@
   "devDependencies": {
     "@types/ejs": "^2.6.3",
     "@types/listr": "^0.14.2",
+    "@types/mkdirp": "^1.0.0",
     "@types/ncp": "^2.0.1",
     "@types/node": "^12.7.4",
+    "@types/pluralize": "0.0.29",
     "@types/rimraf": "^3.0.0",
     "@types/shelljs": "^0.8.5",
     "@types/yargs": "^15.0.4",
